ec22.tf
/* 

resource "aws_instance" "cloud_2" {
    ami = "ami-0182f373e66f89c85"
    instance_type = "t2.micro"
    key_name = "windows"

    tags = {
      name = "surendhar"
    }
}

 */
